# nvim_config

./: .gitignore  README.md  init.lua  lazy-lock.json  package_nvim.sh  test_jdtls.sh  test_printf.c  time_jdtls.py
.github/: copilot-instructions.md
after/syntax/: xml.vim
docs/: java-lsp-and-keymaps.zh-CN.md
ftplugin/: java.lua
lua/user/: audit.lua  comment.lua  dap.lua  dap_keymaps.lua  dap_snippets.lua  dap_ui.lua  datasource.lua  file_actions.lua  java.lua  json_meta.lua  jump.lua  (+15 more)
scripts/: fetch_table_schema.py
test/: commenting_spec.lua  cpp_keymap_scope_spec.lua  dap_config_spec.lua  dap_cpp_spec.lua  dap_interactive_spec.lua  dap_keymaps_spec.lua  dap_ui_spec.lua  datasource_spec.lua  file_actions_spec.lua  java_autostart_spec.lua  java_completion_spec.lua  java_dap_keymaps_integration.lua  java_diagnostics_spec.lua  java_double_layer_autostart_spec.lua  java_file_actions_integration.lua  java_hover_type_definition_spec.lua  java_jdk_navigation_spec.lua  java_mason_spec.lua  java_navigation_spec.lua  java_service_navigation_spec.lua  java_signature_help_spec.lua  json_meta_spec.lua  jump_spec.lua  lsp_keymaps_spec.lua  mybatis_jump_completion_spec.lua  mybatis_plugin_integration_spec.lua  mybatis_spec.lua  printf_highlight_spec.lua  run_regression_suite.sh  scratchpad_spec.lua  select_spec.lua  spec_support.lua  telescope_path_spec.lua  xml_editing_spec.lua
test-projects/cpp-cmake-demo/: .nvim-dap.json  CMakeLists.txt
test-projects/cpp-cmake-demo/include/demo/: app.h  worker.h
test-projects/cpp-cmake-demo/src/: app.cpp  main.cpp  worker.cpp
(+30 files in other folders)
